<resources>
    <string name="app_name">La Delicia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">La Delicia</string>
    <string name="nav_header_subtitle">francisco.ramirez@tecsup.edu.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="tamanio">
        <item>Mediana</item>
        <item>Grande</item>
        <item>Familiar</item>
    </string-array>

    <string name="maps">Mapa</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Pizzas</string>
    <string name="menu_slideshow">Pastas</string>
    <string name="menu_promocion">Promocines</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_ubicacion">Ubicación</string>
    <string name="menu_login">Login</string>

    <string name="promociones">Pantalla de Promociones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>